# erpnext_demo_data

./: README.md  pyproject.toml
.github/workflows/: ci.yml
erpnext_demo_data/: hooks.py  modules.txt
erpnext_demo_data/erpnext_demo_data/doctype/account_settings/: account_settings.json  account_settings.py
erpnext_demo_data/erpnext_demo_data/doctype/demo_data_settings/: demo_data_settings.js  demo_data_settings.json  demo_data_settings.py  test_demo_data_settings.py
